fix code sample display on mobile for guide

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -21,6 +21,16 @@
   .page {
     padding-left: 0;
   }
+
+  .mobile-hidden{
+    display: none;  
+  }
+}
+
+@media (min-width: 848px){  
+  .screen-hidden{
+    display: none;  
+  }
 }
 
 .reference-page
